<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_lozenge"
        android:theme="@style/AppThemeWhiteText"
        tools:background="@drawable/bg_rounded_lozenge_primary">

        <com.softwareoverflow.hiit_trainer.ui.view.CircularIconImageView
            android:id="@+id/circularIconImageView"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            app:colorHex='@{"#008577"}'
            app:iconName='@{"icon_repeat_white"}'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="9dp"
            android:text="@string/repeat_workout"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/circularIconImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circularIconImageView"
            app:layout_constraintTop_toTopOf="@+id/circularIconImageView" />


        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_workout"
            app:layout_constraintBottom_toBottomOf="@+id/workoutNumRepsPicker"
            app:layout_constraintEnd_toStartOf="@+id/workoutNumRepsPicker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/workoutNumRepsPicker" />

        <NumberPicker
            android:id="@+id/workoutNumRepsPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/circularIconImageView" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/times"
            app:layout_constraintBottom_toBottomOf="@+id/workoutNumRepsPicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/workoutNumRepsPicker"
            app:layout_constraintTop_toTopOf="@+id/workoutNumRepsPicker" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with"
            app:layout_constraintBottom_toBottomOf="@+id/workoutRecoveryTime"
            app:layout_constraintEnd_toStartOf="@+id/workoutRecoveryTime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/workoutRecoveryTime" />

        <EditText
            android:id="@+id/workoutRecoveryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="3"
            android:text="@string/recovery_default"
            app:layout_constraintEnd_toStartOf="@+id/textView16"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/workoutNumRepsPicker" />


        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/workoutRecoveryTime"
            android:text="@string/s_rest_in_between"
            app:layout_constraintBottom_toBottomOf="@+id/workoutRecoveryTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/workoutRecoveryTime"
            app:layout_constraintTop_toBottomOf="@+id/workoutNumRepsPicker" />


        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workoutRecoveryTime" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toTopOf="@+id/cancelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>